# ouroboros

./: README.md  SDXL.py  Stable_Cascade.py  Stable_Diffusion.py  file_finder.py  llama.py  ouroboros.py  pyproject.toml
demos/Kaleidoscope/: prompt1.txt  prompt2.txt  prompt3.txt  prompt4.txt  prompt5.txt  prompt6.txt  prompt7.txt  prompt8.txt
demos/Kangaroo/: prompt1.txt  prompt2.txt  prompt3.txt  prompt4.txt  prompt5.txt  prompt6.txt  prompt7.txt  prompt8.txt  prompt9.txt
demos/Lizard/: prompt1.txt  prompt2.txt
