[tool.poetry]
name = "llama"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.1.6"
torch = "^2.2.1"
diffusers = {git = "https://github.com/kashif/diffusers.git", rev = "wuerstchen-v3"}
transformers = "^4.38.1"
accelerate = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
